# dnasight

./: LICENSE  README.md  dnasight-cmd.py  dnasight-cmd.spec  dnasight-gui.py  dnasight-gui.spec  pyproject.toml  requirements.txt
.github/workflows/: build_release.yml  publish.yml  tests.yml
data/example_data_linear_-hsp/: 21220240046_0001.tif  21220240066_0007.tif  21220240071_0007.tif  pixel_sizes.csv
dnasight/: cluster.py  config.yaml  dataset.py  dna.py  dnasight_cmd.py  dnasight_gui.py  shared.py  train.py  unet.py
tests/: test_smoke.py
