[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnasight"
version = "1.7.0"
description = "DNAsight"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Emily Winther Sørensen", email = "es@chem.ku.dk" },
    { name = "Julius B. Kirkegaard", email = "juki@di.ku.dk" }
]
requires-python = ">=3.10"

dependencies = [
    "roifile==2026.1.29",
    "scikit-image==0.26.0",
    "scipy==1.17.0",
    "tifffile==2026.1.28",
    "numpy==2.3.0",
    "opencv-python-headless==4.13.0.92",
    "matplotlib==3.10.8",
    "pandas==3.0.0",
    "tqdm==4.67.3",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "albumentations==2.0.8",
    "imagecodecs==2026.1.14",
    "scikit-learn==1.8.0",
    "numba==0.63.1",
    "mahotas==1.4.18",
    "dearpygui==2.1.1",
    "trackpy==0.7",
    "pyinstaller==6.18.0",
    "certifi==2026.1.4",
]


[project.urls]
Homepage = "https://github.com/emilywinther/dnasight"
Repository = "https://github.com/emilywinther/dnasight"
Issues = "https://github.com/emilywinther/dnasight/issues"

[tool.setuptools]
packages = ["dnasight"]

[tool.setuptools.package-data]
dnasight = ["config.yaml", "logo.png"]

[project.scripts]
dnasight-cmd = "dnasight.dnasight_cmd:main"

[project.gui-scripts]
dnasight-gui = "dnasight.dnasight_gui:cmd"
